Closed Bug 484400 Opened 16 years ago Closed 15 years ago

Incorrect float containing block used in ContentRemoved if the frame being removed is positioned

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1

People

(Reporter: bzbarsky, Assigned: tnikkel)

References

Details

Attachments

(1 file, 1 obsolete file)

See bug 162063 comment 21 and the testcases for first-letter in that bug.
Timothy, want to take this?
Component: Layout: Misc Code → Layout: Images
OS: Mac OS X → Mac System 9.x
Target Milestone: --- → mozilla1.9.2
Version: Trunk → Other Branch
Sure. I assume changing those other fields was accidental? Unless this bug affects Mac System 9.x users much more than everyone else. :)
Component: Layout: Images → Layout: Misc Code
OS: Mac System 9.x → All
Hardware: x86 → All
Target Milestone: mozilla1.9.2 → ---
Version: Other Branch → Trunk
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → tnikkel
Attachment #411921 - Flags: review?(bzbarsky)
Er, yeah. I have no idea why those other fields changed. ;)
Comment on attachment 411921 [details] [diff] [review] patch Make the reference use a <span> around the T and style the <span>, assuming that still passes? With that, looks great.
Attachment #411921 - Flags: review?(bzbarsky) → review+
(In reply to comment #5) > (From update of attachment 411921 [details] [diff] [review]) > Make the reference use a <span> around the T and style the <span>, assuming > that still passes? With that, looks great. It does on Linux, but fails on Windows and Mac, so I'll leave it without a styled fake first-letter span. We have tests to make sure that we apply first-letter at all, so it should be fine.
They fail because they are shifted by about 1 pixel, not because of anything seriously wrong.
Attached patch patch v2Splinter Review
I realized that this change could trigger the assertion that "containingBlock == GetFloatContainingBlock(parentFrame)" lower down in ContentRemoved. But there is no reason for that assertion to hold true, so remove it. And I noticed that we create an unused frame construction state, so got rid of that (and the same in CharacterDataChanged).
Attachment #411921 - Attachment is obsolete: true
Attachment #416728 - Flags: review?(bzbarsky)
Attachment #416728 - Flags: review?(bzbarsky) → review+
Blocks: 537059
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: