Bug 484400. When removing a positioned element use the placeholder frame to get the relevant containing block for first-letter processing. r=bzbarsky

--HG--
extra : rebase_source : 9a327e8f44541ac822bc7be52caa1ceab825ccd1